<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardBackgroundColor="@color/colorAbout">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">


            <ImageView
                android:id="@+id/aboutImg"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/main_icon" />
            <TextView
                android:id="@+id/aboutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutImg"
                android:text="@string/app_name"
                android:textColor="@color/colorFab"
                android:textSize="25sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/mangaDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutTitle"
                android:text="@string/a_propos"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="50dp"
                android:textSize="25sp"
                android:gravity="center"/>

            <Button
                android:id="@+id/aboutButtonGit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/mangaDesc"
                android:backgroundTint="@color/colorGit"
                android:textColor="@color/colorMail"
                android:layout_marginTop="30dp"
                android:text="@string/github"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/aboutButtonTwitter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/aboutButtonGit"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorTwitter"
                android:textColor="@color/colorMail"
                android:text="@string/twitter"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/aboutButtonMail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/aboutButtonTwitter"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorMail"
                android:textColor="@color/colorBlack"
                android:text="@string/mail"
                tools:ignore="UnusedAttribute" />

        </RelativeLayout>

        <TextView
            android:id="@+id/aboutDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutButtonMail"
            android:text="@string/footer"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_gravity="bottom"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorFab"
            android:src="@drawable/megaphone"
            tools:ignore="HardcodedText,UnusedAttribute"
            android:contentDescription="Bouton flotant prononciation Toshokan" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>